# tree_algorithms

./: .beman-tidy.yaml  .copier-answers.yml  .exemplar_version  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Makefile  README.md  lockfile.json  pyproject.toml  vcpkg.json
.github/: CODEOWNERS
.github/workflows/: ci_tests.yml  codeql.yml  doxygen-gh-pages.yml  ossf-scorecard-analysis.yml  pre-commit-update.yml  vcpkg-release.yml
benchmarks/: compile_trace_report.py
benchmarks/beman/tree_algorithms/: CMakeLists.txt  allocator.bench.cpp  build.bench.cpp  ct_fix.cpp.in  ct_plain.cpp.in  fix_unique_tree.hpp  fold.bench.cpp  inline_layer.hpp  naive_trees.hpp
cmake/: ci-clang-toolchain.cmake  clang-flags.cmake  gcc-16-toolchain.cmake  gcc-flags.cmake  gcovr.cfg.in  llvm-toolchain.cmake
docs/: DECISIONS.md  recursive-tree-algorithms.org  references.bib
docs/notes/: allocator-adr.md  allocator-awareness-plan.md  anchor-inventory.md  article-reconciliation-memo.md  engineering-reality-sections.md  extraction-plan.md  punch-list.md  representations-and-sequence-interfaces.md
docs/notes/allocator/: DEVIATIONS.md  HANDOFF-WP0.md  HANDOFF-WP1.md  HANDOFF-WP2.md  HANDOFF-WP4.md  HANDOFF-WP5-expr.md  HANDOFF-WP5.md  HANDOFF-WP6.md  HANDOFF-WP7.md  HANDOFF-WP8-bench.md  HANDOFF-WP8-prose.md
examples/: CMakeLists.txt  binary_tree_adapt.cpp  expression_algorithms.cpp  fixpoint_tree_example.cpp  nonce_tree_direct.cpp  search_tree_on_fix.cpp  sequence_algorithms.cpp  todo.cpp
include/beman/tree_algorithms/: CMakeLists.txt  binary_tree.hpp  box.hpp  child_slot.hpp  config.hpp  config_generated.hpp.in  expression.hpp  fix.hpp  fold_map.hpp  fold_map_lookup.hpp  fringe_tree.hpp  functor.hpp  functors.hpp  overloaded.hpp  pmr.hpp  recursion_schemes.hpp  recursion_schemes_lookup.hpp  rose_tree.hpp  todo.hpp  tree_algorithms.cppm  tree_algorithms.hpp
infra/: .pre-commit-config.yaml  README.md
infra/.github/workflows/: pre-commit.yml
infra/cmake/: BuildTelemetry.cmake  BuildTelemetryConfig.cmake  Config.cmake.in  beman-install-library.cmake  llvm-libc++-toolchain.cmake  telemetry.sh  use-fetch-content.cmake
papers/: DnnnnR0-recursive-tree-algorithms.md  algorithms-for-trees.md
port/: portfile.cmake.in  vcpkg.json.in
tests/beman/tree_algorithms/: CMakeLists.txt  binary_tree.test.cpp  box.test.cpp  child_slot.test.cpp  expression.test.cpp  fix.test.cpp  fold_map.test.cpp  fringe_tree.test.cpp  functor.test.cpp  functors.test.cpp  overloaded.test.cpp  pmr.test.cpp  recursion_schemes.test.cpp  recursion_schemes_lookup.test.cpp  rose_tree.test.cpp  todo.test.cpp
